# beets-discord-notifier

./: pyproject.toml
beetsplug/: discord.py  discord_notifier.py
