[project]
name = "beets-discord-notifier"
version = "0.1.0"
description = "Send a message through Discord on album importing"
authors = [
    {name = "Long Nguyen",email = "nguyen.long.908132@gmail.com"}
]
license = {text = "CC0"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beets (>=2.2.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
